# scoring-api

./: .pre-commit-config.yaml  Makefile  README.md  api.py  pyproject.toml  test.py
.github/workflows/: ci.yml
