[project]
name = "scoring-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Alina Zharkevich",email = "76485281+alinasafina22@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.3,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
